# universe-contracts

./: README.md
cw20-verse/: Cargo.toml
cw20-verse-airdrop/: Cargo.toml  README.md  proofs_stage_1.json
