[package]
name = "cw20-verse-airdrop"
version = "0.1.0"
authors = ["Big Bang <bigbang@universedao.io>"]
edition = "2018"
description = "An airdrop contract that allows claiming rewards with Merkle Tree based proof"
license = "Apache-2.0"

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw0 = { version = "0.10.3" }
cw2 = { version = "0.10.3" }
cw20 = { version = "0.10.3" }
cosmwasm-std = { version = "1.0.0-beta" }
cw-storage-plus = { version = "0.10.3" }
schemars = "0.8.1"
serde = { version = "1.0.125", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.24" }
hex = "0.4"
sha2 = { version = "0.9.5", default-features = false }

[dev-dependencies]
cosmwasm-schema = "1.0.0-beta"
serde_json = "1.0"
