[package]
name = "cw20-verse"
version = "0.1.0"
authors = ["Big Bang <bigbang@universedao.io>"]
edition = "2018"
description = "VERSE token implementation"
license = "Apache-2.0"
repository = "https://github.com/Universe-DAO/universe-contracts"
homepage = "https://universedao.io"
documentation = "https://docs.universedao.io"

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw0 = { version = "0.10.3" }
cw2 = { version = "0.10.3" }
cw20 = { version = "0.10.3" }
cw-storage-plus = { version = "0.10.3" }
cosmwasm-std = { version = "1.0.0-beta" }
schemars = "0.8.1"
serde = { version = "1.0.125", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.24" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta" }
cw-multi-test = { version = "0.10.3" }
cw20-base = { version = "0.10.3", features = ["library"] }